Merge recent changes in JDK9.